--- a/views/login.ejs
+++ b/views/login.ejs
@@ -210,13 +210,12 @@
       <button class="btn btn-primary w-100 py-2" type="submit">Sign in</button>
       <p class="text-center">dosen't have an account? please <a href="/register">sign up</a></p>
       <p class="mt-5 mb-3 text-body-secondary text-center">© 2017–2023</p>
+      <%- include('./partials/alert') %>
     </form>
   </main>
   <script src="./bootstrap/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
     crossorigin="anonymous"></script>
-
-
 
 </body>
 
