--- a/views/users/list.ejs
+++ b/views/users/list.ejs
@@ -1,5 +1,13 @@
 <%- include('../partials/header') %>
     <div class="container">
+        <div class="foot">
+            <div>
+                <h3><%= user.email %></h2>
+            </div>
+            <div>
+                <a href="/logout" class="btn btn-secondary mt-2">Sign Out</a>
+            </div>
+        </div>
         <div>
             <h1>SQLite Bread (Browse, Read, Edit, Add, Delete) and Pagination</h1>
         </div>
