--- a/views/register.ejs
+++ b/views/register.ejs
@@ -196,8 +196,8 @@
 
   <main class="form-signin w-100 m-auto">
     <form action="" method="post">
-      <img class="mb-4" src="./images/bootstrap-logo.svg" alt="" width="72" height="57">
-      <h1 class="h3 mb-3 fw-normal">Please sign up</h1>
+      <img class="mb-4" src="./images/rubicamp.png" alt="" width="300" height="100">
+      <h1 class="h3 mb-3 fw-normal text-center">Please sign up</h1>
       <div class="form-floating">
         <input type="email" class="form-control" id="floatingInput" name="email" placeholder="name@example.com">
         <label for="floatingInput">Email address</label>
