--- a/views/users/add.ejs
+++ b/views/users/add.ejs
@@ -1,17 +1,18 @@
 <%- include('../partials/header') %>
     <div class="container">
-        <div>
+        <div class="head">
             <h1>Adding Data</h1>
         </div>
         <form action="" method="post">
-            <div class="row mb-3">
+            <div class="row mb-3 mt-3 px-3">
                 <label for="title" class="col-sm-2 col-form-label">Title</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" name="title" placeholder="Insert your title" required/>
+                    <input type="text" class="form-control" name="title" placeholder="Insert your title" required />
                 </div>
-            <div>
+            </div>
+            <div class="foot2">
                 <button type="submit" class="btn btn-primary">Save</button>
                 <a class="btn btn-warning" href="/users">Back</a>
             </div>
         </form>
-<%- include('../partials/footer') %>
+        <%- include('../partials/footer') %>
