--- a/views/users/edit.ejs
+++ b/views/users/edit.ejs
@@ -1,8 +1,38 @@
 <%- include('../partials/header') %>
-    <div>
+    <div class="container">
         <div class="head">
             <h1>Updatting Data</h1>
         </div>
-        
+        <form action="" method="post">
+            <div class="row mb-3 mt-3 px-3">
+                <label for="title" class="col-sm-2 col-form-label">Title</label>
+                <div class="col-sm-10">
+                    <input type="text" class="form-control" name="title" value="<%= data[0].title %>" required />
+                </div>
+            </div>
+            <div class="row mb-3 mt-3 px-3">
+                <label for="deadline" class="col-sm-2 col-form-label">Deadline</label>
+                <div class="col-sm-10">
+                    <input type="datetime-local" class="form-control" name="deadline"
+                        value="<%= moment(data[0].deadline).format('YYYY-MM-DDThh:mm') %>" required />
+                </div>
+            </div>
+            <div class="row pb-3 px-3">
+                <label for="complete" class="col-sm-2 col-form-label">Complete</label>
+                <div class="col-sm-10 form-check mt-1" style="padding-left: 35px;">
+                    <input class="form-check-input" type="checkbox" name="complete" id="complete"
+                        <%= data[0].complete? "checked" : "" %> >
+                    <label class="form-check-label" for="complete">
+                        done
+                    </label>
+                </div>
+            </div>
+        </form>
+        <div class="foot2">
+            <button type="submit" class="btn btn-primary">Save</button>
+            <a class="btn btn-warning" href="/users">Back</a>
+        </div>
     </div>
-<%- include('../partials/footer') %>
+    <%- include('../partials/footer') %>
+
+    
