--- a/views/users/list.ejs
+++ b/views/users/list.ejs
@@ -1,6 +1,6 @@
 <%- include('../partials/header') %>
     <div class="container">
-        <div class="foot">
+        <div class="foot head pb-4">
             <div>
                 <h3><%= user.email %></h2>
             </div>
@@ -8,20 +8,20 @@
                 <a href="/logout" class="btn btn-secondary mt-2">Sign Out</a>
             </div>
         </div>
-        <div>
-            <h1>SQLite Bread (Browse, Read, Edit, Add, Delete) and Pagination</h1>
+        <div class="head mt-0 rounded-0">
+            <h1>PostgreSQL Breads (Browse, Read, Edit, Add, Delete, Sort)</h1>
         </div>
         <div>
             <form action="/users" method="get">
                 <input type="hidden" name="page" value="1">
-                <div class="row mb-3">
+                <div class="row mb-3 mt-3 px-3">
                     <label for="title" class="col-sm-2 col-form-label">Title</label>
                     <div class="col-sm-10">
                         <input type="text" class="form-control" name="title" placeholder="Insert your title"
                             value="<%= query.title %>" />
                     </div>
                 </div>
-                <div class="row mb-3">
+                <div class="row mb-3 px-3">
                     <label for="deadline" class="col-sm-2 col-form-label">Deadline</label>
                     <div class="col-sm-10">
                         <div class="row g-3">
@@ -38,7 +38,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="row mb-3">
+                <div class="row mb-3 px-3">
                     <label for="Complete" class="col-sm-2 col-form-label">Complete</label>
                     <div class="col-sm-10">
                         <% if(query.complete=='true' ) { %>
@@ -62,7 +62,7 @@
                                     <% } %>
                     </div>
                 </div>
-                <div class="row mb-3">
+                <div class="row mb-3 px-3">
                     <label for="Operation" class="col-sm-2 col-form-label">Operation</label>
                     <div class="col-sm-10 rp">
                         <div class="form-check form-check-inline" style="padding-left: 0px;">
@@ -103,14 +103,14 @@
                         </div>
                     </div>
                 </div>
-                <div>
+                <div class="px-3 pb-3">
                     <button class="btn btn-info" type="submit">Search</button>
                     <a class="btn btn-warning" href="/users">Reset</a>
                 </div>
             </form>
         </div>
         <div>
-            <table class="table table-striped">
+            <table class="table table-striped mb-0">
                 <thead>
                     <tr>
                         <th>No.</th>
@@ -145,7 +145,7 @@
                 </tbody>
             </table>
         </div>
-        <div class="foot">
+        <div class="foot foot2">
             <div>
                 <a class="btn btn-primary" href="/users/add">Add</a>
             </div>
