--- a/views/partials/alert.ejs
+++ b/views/partials/alert.ejs
@@ -1,10 +1,10 @@
 <% if (successInfo.length> 0) { %>
-    <div class="alert alert-success" role="alert">
+    <div class="alert alert-success" style="text-align: center;" role="alert">
         <%= successInfo %>
     </div>
     <% } %>
 <% if (failedInfo.length> 0) { %>
-    <div class="alert alert-danger" role="alert">
+    <div class="alert alert-danger" style="text-align: center;" role="alert">
         <%= failedInfo %>
     </div>
 <% } %>
