--- a/views/users/list.ejs
+++ b/views/users/list.ejs
@@ -1,11 +1,16 @@
 <%- include('../partials/header') %>
     <div class="container">
-        <div class="foot head pb-4">
-            <div>
-                <h3><%= user.email %></h2>
+        <div class="foot head pb-3">
+            <div class="ava">
+                <a id='uploadForm' href="users/upload"><img class="pp"
+                        src="<%= akun.avatar? `../images/${akun.avatar}` : `../images/avatar_default.jpeg` %>"></a>
+                <h3>
+                    <%= user.email %>
+                        </h2>
             </div>
             <div>
-                <a href="/logout" class="btn btn-secondary mt-2">Sign Out</a>
+                <a href="/logout" class="btn btn-secondary mt-2"><i class="fa-solid fa-right-from-bracket"></i> sign
+                    out</a>
             </div>
         </div>
         <div class="head mt-0 rounded-0">
@@ -14,6 +19,8 @@
         <div>
             <form action="/users" method="get">
                 <input type="hidden" name="page" value="1">
+                <input type="hidden" name="sort" value="<%= sort %>">
+                <input type="hidden" name="sortby" value="<%= sortby %>">
                 <div class="row mb-3 mt-3 px-3">
                     <label for="title" class="col-sm-2 col-form-label">Title</label>
                     <div class="col-sm-10">
@@ -104,8 +111,8 @@
                     </div>
                 </div>
                 <div class="px-3 pb-3">
-                    <button class="btn btn-info" type="submit">Search</button>
-                    <a class="btn btn-warning" href="/users">Reset</a>
+                    <button class="btn btn-info" type="submit"><i class="fa fa-search"></i></button>
+                    <a class="btn btn-warning" href="/users"><i class="fa-solid fa-rotate"></i></a>
                 </div>
             </form>
         </div>
@@ -114,77 +121,143 @@
                 <thead>
                     <tr>
                         <th>No.</th>
-                        <th>Title</th>
-                        <th>Complete</th>
-                        <th>Deadline</th>
+                        <th> <a style="color: black;" href="/users<%= url.replace(`sortby=${sortby}`, `sortby=title`).replace(`sort=${sort}`, `sort=${sort == 'desc' ? 'asc' : 'desc'}`) %>"><i class="fa-solid fa-<%= sortby == 'title' ? sort=='desc' ? 'sort-down' : 'sort-up' : 'sort' %>"></i></a> Title</th>
+                        <th> <a style="color: black;" href="/users<%= url.replace(`sortby=${sortby}`, `sortby=complete`).replace(`sort=${sort}`, `sort=${sort == 'desc' ? 'asc' : 'desc'}`) %>"><i class="fa-solid fa-<%= sortby == 'complete' ? sort=='desc' ? 'sort-down' : 'sort-up' : 'sort' %>"></i></a> Complete</th>
+                        <th> <a style="color: black;" href="/users<%= url.replace(`sortby=${sortby}`, `sortby=deadline`).replace(`sort=${sort}`, `sort=${sort == 'desc' ? 'asc' : 'desc'}`) %>"><i class="fa-solid fa-<%= sortby == 'deadline' ? sort=='desc' ? 'sort-down' : 'sort-up' : 'sort' %>"></i></a> Deadline</th>
                         <th>action</th>
                     </tr>
                 </thead>
                 <tbody>
                     <% data.forEach((item, index)=> { %>
-                        <tr>
-                            <td>
-                                <%= index + offset + 1 %>
-                            </td>
-                            <td>
-                                <%= item.title %>
-                            </td>
-                            <td>
-                                <%= item.complete? "Done" : "Not Yet" %>
-                            </td>
-                            <td>
-                                <%= moment(item.deadline).locale('id').format('Do MMM YYYY LT') %>
-                            </td>
-                            <td>
-                                <a class="btn btn-success" href="/users/edit/<%= item.id %>">Update</a>
-                                <button class="btn btn-danger"
-                                    onclick="on('<%= item.id %>, <%= item.name %>')">Delete</button>
-                            </td>
-                        </tr>
+                        <% if (new Date(`${item.deadline}`).getTime() < new Date().getTime() && !item.complete) { %>
+                            <tr>
+                                <td style="background-color: red;">
+                                    <%= index + offset + 1 %>
+                                </td>
+                                <td style="background-color: red;">
+                                    <%= item.title %>
+                                </td>
+                                <td style="background-color: red;">
+                                    <%= item.complete? "Done" : "Not Yet" %>
+                                </td>
+                                <td style="background-color: red;">
+                                    <%= moment(item.deadline).locale('id').format('Do MMM YYYY LT') %>
+                                </td>
+                                <td style="background-color: red;">
+                                    <a class="btn btn-success" href="/users/edit/<%= item.id %>"><i
+                                            class="fa-sharp fa-solid fa-pencil"></i></a>
+                                    <button type="button" class="btn btn-danger" data-bs-toggle="modal"
+                                        data-bs-target="#deleteModal<%= item.id %>">
+                                        <i class="fa-solid fa-trash" ></i>
+                                    </button>
+                                </td>
+                                <div class="modal fade" id="deleteModal<%= item.id %>" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                    <div class="modal-dialog">
+                                      <div class="modal-content">
+                                        <div class="modal-header">
+                                          <h1 class="modal-title fs-5" id="exampleModalLabel">Delete Confirmation</h1>
+                                          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                        </div>
+                                        <div class="modal-body">
+                                          Apakah kamu yakin akan menghapus data "<%= item.title %>"?
+                                        </div>
+                                        <div class="modal-footer">
+                                          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">No</button>
+                                          <a class="btn btn-warning" href="/users/delete/<%= item.id %>">Yes</a>
+                                        </div>
+                                      </div>
+                                    </div>
+                                  </div>
+                            </tr>
+                            <% } else { %>
+                                <tr>
+                                    <td>
+                                        <%= index + offset + 1 %>
+                                    </td>
+                                    <td>
+                                        <%= item.title %>
+                                    </td>
+                                    <td>
+                                        <%= item.complete? "Done" : "Not Yet" %>
+                                    </td>
+                                    <td>
+                                        <%= moment(item.deadline).locale('id').format('Do MMM YYYY LT') %>
+                                    </td>
+                                    <td>
+                                        <a class="btn btn-success" href="/users/edit/<%= item.id %>"><i
+                                                class="fa-sharp fa-solid fa-pencil"></i></a>
+                                        <button type="button" class="btn btn-danger" data-bs-toggle="modal"
+                                            data-bs-target="#deleteModal<%= item.id %>">
+                                            <i class="fa-solid fa-trash" ></i>
+                                        </button>
+                                    </td>
+                                    <div class="modal fade" id="deleteModal<%= item.id %>" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                        <div class="modal-dialog">
+                                          <div class="modal-content">
+                                            <div class="modal-header">
+                                              <h1 class="modal-title fs-5" id="exampleModalLabel">Delete Confirmation</h1>
+                                              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                            </div>
+                                            <div class="modal-body">
+                                              Apakah kamu yakin akan menghapus data "<%= item.title %>"?
+                                            </div>
+                                            <div class="modal-footer">
+                                              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">No</button>
+                                              <a class="btn btn-warning" href="/users/delete/<%= item.id %>">Yes</a>
+                                            </div>
+                                          </div>
+                                        </div>
+                                      </div>
+                                </tr>
+                                <% } %>
                         <% }) %>
                 </tbody>
             </table>
         </div>
-        <div class="foot foot2">
+        <div class="foot foot2 mb-3 pb-0">
             <div>
-                <a class="btn btn-primary" href="/users/add">Add</a>
+                <a class="btn btn-primary" href="/users/add"><i class="fa-solid fa-plus"></i></a>
             </div>
             <div>
                 <nav aria-label="Page navigation example">
                     <ul class="pagination justify-content-end">
                         <li class="page-item">
                             <% if (page=='1' ) { %>
-                                <a class="page-link" href="/users<%= url.replace(`page=${page}`,`page=${page}`) %>">&laquo;</a>
+                                <a class="page-link"
+                                    href="/users<%= url.replace(`page=${page}`,`page=${page}`) %>">&laquo;</a>
                                 <% } else { %>
-                                    <a class="page-link" href="/users<%= url.replace(`page=${page}`,`page=${page - 1}`) %>">&laquo;</a>
+                                    <a class="page-link"
+                                        href="/users<%= url.replace(`page=${page}`,`page=${page - 1}`) %>">&laquo;</a>
                                     <% } %>
                         </li>
                         <% for (let i=1; i <=pages; i++ ) { %>
-                            <% if (i == page) { %>
+                            <% if (i==page) { %>
                                 <li class="page-item active"><a class="page-link"
-                                    href="/users<%=url.replace(`page=${page}`, `page=${i}`) %>">
-                                    <%= i %>
-                                </a></li>
-                                <% } else { %>
-                                    <li class="page-item"><a class="page-link"
                                         href="/users<%=url.replace(`page=${page}`, `page=${i}`) %>">
                                         <%= i %>
-                                    </a></li>    
+                                    </a></li>
+                                <% } else { %>
+                                    <li class="page-item"><a class="page-link"
+                                            href="/users<%=url.replace(`page=${page}`, `page=${i}`) %>">
+                                            <%= i %>
+                                        </a></li>
                                     <% } %>
-                            <% } %>
-                                <li class="page-item">
-                                    <% if (page==pages ) { %>
-                                        <a class="page-link" href="/users<%= url.replace(`page=${page}`,`page=${page}`) %>">&raquo;</a>
-                                        <% } else { %>
-                                            <a class="page-link"
-                                                href="/users<%= url.replace(`page=${page}`,`page=${(page * 1) + 1}`) %>">&raquo;</a>
-                                            <% } %>
-                                </li>
+                                        <% } %>
+                                            <li class="page-item">
+                                                <% if (page==pages ) { %>
+                                                    <a class="page-link"
+                                                        href="/users<%= url.replace(`page=${page}`,`page=${page}`) %>">&raquo;</a>
+                                                    <% } else { %>
+                                                        <a class="page-link"
+                                                            href="/users<%= url.replace(`page=${page}`,`page=${(page * 1) + 1}`) %>">&raquo;</a>
+                                                        <% } %>
+                                            </li>
                     </ul>
                 </nav>
             </div>
-              
+
         </div>
     </div>
 
     <%- include('../partials/footer') %>
+
