--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,10 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bread (Browse, Read, Edit, Add, Delete) and Pagination</title>
+    <title>Breads (Browse, Read, Edit, Add, Delete, Sort)</title>
     <link rel="stylesheet" href="/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="/stylesheets/style.css" />
-    <script src="/js/util.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+    <script src="/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
 <body>
