--- a/views/register.ejs
+++ b/views/register.ejs
@@ -213,6 +213,7 @@
       <button class="btn btn-primary w-100 py-2" type="submit">Sign up</button>
       <p class="text-center">have an account? please <a href="/">sign in</a></p>
       <p class="mt-5 mb-3 text-body-secondary text-center">© 2017–2023</p>
+      <%- include('./partials/alert') %>
     </form>
   </main>
   <script src="./bootstrap/dist/js/bootstrap.bundle.min.js"
