--- a/views/users/add.ejs
+++ b/views/users/add.ejs
@@ -11,8 +11,8 @@
                 </div>
             </div>
             <div class="foot2">
-                <button type="submit" class="btn btn-primary">Save</button>
-                <a class="btn btn-warning" href="/users">Back</a>
+                <button type="submit" class="btn btn-primary"><i class="fa-solid fa-floppy-disk"></i></button>
+                <a class="btn btn-warning" href="/users"><i class="fa-solid fa-rotate-left"></i></a>
             </div>
         </form>
         <%- include('../partials/footer') %>
