--- a/views/users/edit.ejs
+++ b/views/users/edit.ejs
@@ -21,17 +21,17 @@
                 <label for="complete" class="col-sm-2 col-form-label">Complete</label>
                 <div class="col-sm-10 form-check mt-1" style="padding-left: 35px;">
                     <input class="form-check-input" type="checkbox" name="complete" id="complete"
-                        <%= data[0].complete? "checked" : "" %> >
+                        <%= data[0].complete? "checked" : "" %> />
                     <label class="form-check-label" for="complete">
                         done
                     </label>
                 </div>
             </div>
+            <div class="foot2">
+                <button type="submit" class="btn btn-primary"><i class="fa-solid fa-floppy-disk"></i></button>
+                <a class="btn btn-warning" href="/users"><i class="fa-solid fa-rotate-left"></i></a>
+            </div>
         </form>
-        <div class="foot2">
-            <button type="submit" class="btn btn-primary">Save</button>
-            <a class="btn btn-warning" href="/users">Back</a>
-        </div>
     </div>
     <%- include('../partials/footer') %>
 
