--- a/views/users/upload.ejs
+++ b/views/users/upload.ejs
@@ -17,8 +17,8 @@
                 </div>
             </div>
             <div class="foot2">
-                <button type="submit" class="btn btn-primary">Upload</button>
-                <a class="btn btn-warning" href="/users">Back</a>
+                <button type="submit" class="btn btn-primary"><i class="fa-solid fa-floppy-disk"></i></button>
+                <a class="btn btn-warning" href="/users"><i class="fa-solid fa-rotate-left"></i></a>
             </div>
         </form>
     </div>
